Created forwarding to Registration-Page

--- a/Calcusino/src/Frontend/Pages/Login.cshtml
+++ b/Calcusino/src/Frontend/Pages/Login.cshtml
@@ -13,3 +13,4 @@
     </div>
     <button type="submit">Login</button>
 </form>
+<a href="/Register" class="btn btn-primary">No account? Register here.</a>
