--- a/Calcusino/src/Frontend/Pages/Register.cshtml
+++ b/Calcusino/src/Frontend/Pages/Register.cshtml
@@ -1,6 +1,5 @@
-﻿namespace Calcusino.src.Frontend.Pages
-{
-    public class Register
-    {
-    }
-}
+﻿@page
+@model Calcusino.src.Frontend.Pages.RegisterModel
+
+<h2>Register</h2>
+<!-- Fields for Registering -->
